# anvar-gpt

./: README.md  anvar.spec  install.ps1  pyproject.toml  run_anvar.py
anvar/: __main__.py  agent.py  config.py  server.py  tools.py
anvar_gpt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
